--- a/public/css/desktop-index.css
+++ b/public/css/desktop-index.css
@@ -52,12 +52,12 @@
     border-radius: 5px;
     background-color: rgb(49, 71, 92);
     color: rgb(248, 212, 92);
-    /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
     max-width: 600px;
     padding: 10px;
   }
   .work-with-us-button button:hover {
-    box-shadow: 6px 6px 30px rgb(248, 212, 92);
+    /* box-shadow: 0px 0px 7px 3px rgb(248, 212, 92); */
+    box-shadow: 0px 0px 7px 3px rgb(49, 71, 92);
   }
   .icon-categories {
     display: flex;
