--- a/public/css/desktop-productDetail.css
+++ b/public/css/desktop-productDetail.css
@@ -16,6 +16,7 @@
 
   .top-flex-mobile {
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
   }
 
@@ -32,15 +33,15 @@
   }
 
   .rating-star {
-    width: 100px;
-    margin-left: 10px;
+    /* width: 100px; */
+    /* margin-left: 1rem; */
   }
   .rating-star p {
-    font-size: 12px;
+    /* font-size: 12px; */
   }
 
   .rating-star {
-    width: 200px;
+    /* width: 200px; */
   }
   .buttons-below-avatar {
     margin-top: 2rem;
@@ -56,19 +57,21 @@
     margin: auto;
     width: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     font-size: 1.5rem;
     align-items: center;
   }
   .column12-productDetail {
-    width: 50%;
+    width: 100%;
     flex-direction: column;
   }
   .column22-productDetail {
     width: 50%;
     flex-direction: column;
   }
-  .prof-detail-text {
+  .workImages {
+    width: 35%;
     font-size: 22px;
   }
   .prof-detail-title-text {
