Solucionado vista profPerProfesssion flex-direction

--- a/views/professionals/profPerProfession.ejs
+++ b/views/professionals/profPerProfession.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/productDetail.css" />
+    <link rel="stylesheet" href="/css/desktop-productDetail.css" />
     <link rel="stylesheet" href="/css/productCart.css" />
     <link rel="stylesheet" href="/css/tablet.css" />
     <link rel="stylesheet" href="/css/tablet-index.css" />
