Sprint 6 terminado. Solucionado bug de errores en la edicion de clientes y profesionales

--- a/views/professionals/editProf.ejs
+++ b/views/professionals/editProf.ejs
@@ -137,9 +137,9 @@
                         <div class="registerInput expirience-list">
                             <label>Atiende Emergencias:
                                 <select name="emergency">
-                                    <option value="Si" <%=(profFound.emergency=="1" ) ? "selected" : "" %>>Si
+                                    <option value="1" <%=(profFound.emergency=="1" ) ? "selected" : "" %>>Si
                                     </option>
-                                    <option value="No" <%=(profFound.emergency=="0" ) ? "selected" : "" %>>No
+                                    <option value="0" <%=(profFound.emergency=="0" ) ? "selected" : "" %>>No
                                     </option>
                                 </select>
                             </label>
