--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -10,39 +10,56 @@
 }
 
 .top-flex-mobile {
-  overflow-wrap: break-word;
-  justify-content: space-between;
-  font-weight: bold;
-  flex-wrap: wrap;
-  align-items: center;
-
-  border-bottom: 10px black double;
-  border-top: 10px black double;
-  padding-left: 10px;
-  padding-right: 10px;
+  /* overflow-wrap: break-word; */
   background-color: white;
-  max-width: 90%;
+  border: 1px solid gray;
+  border-radius: 15px;
+  font-weight: bold;
   margin: auto;
   margin-bottom: 10px;
   margin-top: 10px;
+  max-width: 90%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  color: #333;
+}
+
+.tfm-upper {
+  display: flex;
+  flex-direction: column;
+}
+.tfm-lower {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.tfm-lower .urgency {
+  display: none;
 }
 
 main {
-  background-color: rgb(49, 71, 92);
+  /* background-color: rgb(49, 71, 92); */
 }
 .div-avatar {
-  width: 20%;
+  /* width: 20%; */
 }
 
 .prof-avatar {
-  border: 10px black double;
-  width: 60px;
-  height: 60px;
-  margin: 10px;
+  border: 1px  solid gray;
+  width: 100px;
+  height: 100px;
+  /* margin: 10px; */
 }
 
-.div-descrption {
-  width: 20%;
+.div-descrption div{
+  /* width: 20%; */
+  font-size: 1rem;
 }
 
 /* .description {
@@ -54,22 +71,21 @@ main {
 .reserved-date {
   font-size: 14px;
   text-align: center;
-  width: 20%;
+  /* width: 20%; */
 }
-
+.reserved-date i {
+  color: crimson;
+}
 .price-button-preview {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 90%;
-  justify-content: space-around;
-  width: 20%;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .price-preview p {
   font-size: 14px;
 }
 .title-per-device-productCart {
+  display: none;
   color: black;
   font-size: 16px;
 
@@ -78,7 +94,6 @@ main {
   text-decoration: underline;
 }
 .name-per-device-productCart {
-  color: red;
   font-size: 12px;
 
   /* width: 90%; */
@@ -115,15 +130,16 @@ main {
 
 .keepShopping-button {
   margin: auto;
-  padding: 15px;
-  width: 80%;
+  padding: 1rem;
   text-align: center;
 }
+
 .keepShopping-button button {
-  font-size: 16px;
-  border-radius: 5px;
+  padding: 0.5rem;
+  border: none;
+  font-size: 1.5rem;
+  border-radius: 15px;
   background-color: rgb(49, 71, 92);
   color: rgb(248, 212, 92);
-  width: 80%;
-  height: 30px;
+  width: 250px;
 }
