--- a/public/css/desktop-productCart.css
+++ b/public/css/desktop-productCart.css
@@ -1,3 +1,12 @@
+@media (min-width: 425px) {
+  .card-wrapper {
+      margin: auto;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      width: 70%;
+    }
+  }
+
 @media (min-width: 1000px) {
   .card-wrapper {
     margin: auto;
